[gd_scene load_steps=2 format=3 uid="uid://ui_main_menu"]

[ext_resource type="Script" path="res://scripts/UI/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.8, 0.6, 0.1, 1)
text = "Crownborn: Shattered Lineage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 190.0
offset_right = 250.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Rescue your kin. Reclaim your throne."
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="LeaderboardButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Leaderboard"

[node name="ShopButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Shop"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="MenuButtons/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MenuButtons/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuButtons/LeaderboardButton" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="MenuButtons/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="MenuButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_quit_pressed"]
